--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
+# User created Stuff.
+
+venv/
+
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+
 
 # C extensions
 *.so
