--- a/dbtlearn/dbt_project.yml
+++ b/dbtlearn/dbt_project.yml
@@ -31,3 +31,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   dbtlearn:
+    +materialized: view
+    dim:
+      +materialized: table # models/dim will be tables
+    src:
+      +materialized: ephemeral
